--- a/Content/CSS/main-ltr.css
+++ b/Content/CSS/main-ltr.css
@@ -1,3 +1,3 @@
-p{color:red}
+p{margin-left:50px;padding-right:50px;color:blue}h1{color:blue}p{color:red;margin-left:50px}
 
 /*# sourceMappingURL=main-ltr.css.map */
